# game-theory-lab-3

./: CMakeLists.txt  main.cpp
